# WebShooter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.portfolio/: displayData.json
src/cli/: argumentsParsing.c  argumentsParsing.h  argumentsUtils.c  argumentsUtils.h  argumentsValidation.c  argumentsValidation.h  cliTypes.h  cliwst.c  cwdGetter.c  cwdGetter.h  main.c  parser.c  parser.h  parsing.c  parsing.h  validation.c  validation.h  validator.c  validator.h
src/lib/: archiveUnwebber.c  archiveUnwebber.h  bufferHandler.c  bufferHandler.h  constants.h  contentHandler.c  contentHandler.h  contentsWebber.c  contentsWebber.h  dataGetter.c  dataGetter.h  dataHandler.c  dataHandler.h  fileHandler.c  fileHandler.h  fileManager.c  fileManager.h  libTypes.h  libwst.c  libwst.h  operationTypes.h  pathHandler.c  pathHandler.h  typeChecker.c  typeChecker.h
src/utils/: error.c  error.h  errorPrinting.c  errorPrinting.h  errorThrower.c  errorThrower.h  fileHandler.c  fileHandler.h  mathUtils.c  mathUtils.h  shortcutTypes.h
